--- a/MonitoringSite/Web.config
+++ b/MonitoringSite/Web.config
@@ -5,11 +5,17 @@
   -->
 <configuration>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="RabbitMqUserName" value="guest"/>
+    <add key="RabbitMqUserPassword" value="guest"/>
+    <add key="RabbitMqVirtualHost" value="/"/>
+    <add key="RabbitMqHost" value="localhost"/>
+
+    <add key="RabbitMqExchange" value="TestExchange"/>
+    <add key="RabbitMqQueue" value="TestExchange"/>
   </appSettings>
+  <connectionStrings>
+    <add name="MonitoringDb" connectionString="Data Source=PRAVEEN\SQLEXPRESS;Initial Catalog=Carsales;Integrated Security=True;uid=carsales;password=carsales;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
